--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
     </div>
         <div class="tab-bar">
                 <ul>
-                  <li class="current"><a  href="store.php?m=router&a=app&rid=126951" class="on" style="font-size:14px" ><%= @router.factory %></a></li>
+                  <li class="current">
+				  <a  href="installed?mac=000C29B25BB2" class="on" style="font-size:14px" >
+				 <!-- <a  href="store.php?m=router&a=app&rid=126951" class="on" style="font-size:14px" > -->
+				  <%= @router.factory %></a></li>
             <li class="add"><a title="添加路由器" href="#" onclick="login()" class="add-i"></a> </li>
         </ul>
             </div>
@@ -31,8 +34,8 @@
 
 <div class="g-footer">
     <div class="footer-main">
-		<p><a href="#">关于云Wifi</a><span class="pipe">|</span><a href="#" target="_blank">京ICP备13008126号</a><span class="pipe">|</span><a href="#">联系我们</a></p>
-		<p>Copyright&copy; 2012-2014 HiWiFi.com</p>
+		<p><a href="#">关于云Wifi</a><span class="pipe">|</span><a href="#">联系我们</a></p>
+		<p>Copyright&copy; 2012-2015 企业与工业互联网</p>
     </div>
 </div>
 </body>
