--- a/app/views/plugins/show.html.erb
+++ b/app/views/plugins/show.html.erb
@@ -26,7 +26,7 @@
       var rmac = $("#routermac").val(),
       pluginid = $("#pluginid").val(),
       pstatus = $("#pstatus").val(),
-      url = "http://124.127.116.178/installed?mac="+rmac;
+      url = "/installed?mac="+rmac;
 
       $.post( "/checkpstatus", { routermac:rmac, imagename:pluginid })
         .done(function( data ) {
@@ -46,7 +46,7 @@
       var rmac = $("#routermac").val(),
       pluginid = $("#pluginid").val(),
       pstatus = $("#pstatus").val(),
-      url = "http://124.127.116.178/installed?mac="+rmac;
+      url = "/installed?mac="+rmac;
 
       $.post( "/"+pstatus+"ing", { routermac:rmac, imagename:pluginid })
         .done(function( data ) {
